--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "void-ai",
   "private": true,
@@ -13,8 +12,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.12.7",
-    "@google/genai": "^1.41.0",
-    "katex": "^0.16.9"
+    "@google/genai": "^1.41.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
