--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "recharts": "^2.12.7",
+    "recharts": "^2.15.1",
     "@google/genai": "^1.41.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/node": "^22.13.1",
     "@vitejs/plugin-react": "^4.3.1",
-    "typescript": "^5.5.3",
+    "typescript": "^5.7.3",
     "vite": "^5.4.1"
   }
 }
